Solucionando o problema de encoding html no token. Antes de tratar o token eu uso o  URLDecoder e alterei o decoder de base64 para o Base64.decodeBase64  da apache commons.